--- a/templates/accounts/order_detail.html
+++ b/templates/accounts/order_detail.html
@@ -60,31 +60,21 @@
                                             {% for item in order_detail %}
                                             <tr>
                                                 <td>{{ item.product.product_name }}
-                                                    <p class="text-muted small">
-                                                        {% if item.variations.all %}
-                                                        {% for i in item.variations.all %}
-                                                        {{ i.variation_category | capfirst }} : {{ i.variation_value | capfirst }} <br>
-                                                        {% endfor %}
-                                                        {% endif %}
-                                                    </p>
+                                                    <p class="text-muted small">Brand: {{ item.product.brand }} <br> Country: {{ item.product.country }} </p>
                                                 </td>
                                                 <td class="text-center">{{ item.quantity }}</td>
-                                                <td class="text-center">${{ item.product_price }} USD</td>
+                                                <td class="text-center">Rs.{{ item.product_price }}</td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
                                         <tfoot>
                                             <tr>
                                                 <th colspan="2" class="text-right">Sub Total:</th>
-                                                <th class="text-center">${{ subtotal }} USD</th>
-                                            </tr>
-                                            <tr>
-                                                <th colspan="2" class="text-right">Tax:</th>
-                                                <th class="text-center">${{ order.tax }} USD</th>
-                                            </tr>
+                                                <th class="text-center">Rs.{{ subtotal }}</th>
+                                            </tr> 
                                             <tr>
                                                 <th colspan="2" class="text-right">Grand Total:</th>
-                                                <th class="text-center">${{ order.order_total }} USD</th>
+                                                <th class="text-center">Rs.{{ order.order_total }}</th>
                                             </tr>
                                         </tfoot>
                                     </table>
