--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -41,21 +41,7 @@
                                     <label for="">Address Line 2</label>
                                     <input type="text" name="address_line_2" class="form-control">
                                 </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="col form-group">
-                                    <label for="">City</label>
-                                    <input type="text" name="city" class="form-control" required>
-                                </div>
-                                <div class="col form-group">
-                                    <label for="">State</label>
-                                    <input type="text" name="state" class="form-control" required>
-                                </div>
-                                <div class="col form-group">
-                                    <label for="">Country</label>
-                                    <input type="text" name="country" class="form-control" required>
-                                </div>
-                            </div>
+                            </div> 
                             <div class="form-row">
                                 <label for="">Order Note</label>
                                 <textarea name="order_note" rows="2" class="form-control"></textarea>
@@ -85,13 +71,7 @@
                                             <figcaption class="info">
                                                 <a href="{{ cart_item.product.get_url }}" class="title text-dark">
                                                     {{ cart_item.product.product_name }}</a>
-                                                <p class="text-muted small">
-                                                    {% if cart_item.variations.all %}
-                                                    {% for item in cart_item.variations.all %}
-                                                    {{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }} <br>
-                                                    {% endfor %}
-                                                    {% endif %}
-                                                </p>
+                                                    <p class="text-muted small">Brand: {{ cart_item.product.brand }} <br> Country: {{ cart_item.product.country }} </p>
                                             </figcaption>
                                         </figure>
                                     </td>
