--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -31,6 +31,16 @@
             <main class="col-md-6 border-left">
     <article class="content-body">
     
+      {% if single_product.brandimg %}
+      <figcaption   style="height: 70px;">
+        {% if single_product.brandimg %}
+        <img style="max-height: 85px;max-width: 140px;padding-left: 10px;" class="img-fluid" src="{{ single_product.brandimg.url }}">
+        {% else %}
+        <div ></div>
+        {% endif %}
+      </figcaption>
+      {% endif %}
+
     <h2 class="title">{{ single_product.product_name }}</h2>
     
     <div class="mb-3"> 
@@ -52,12 +62,24 @@
         {% if in_cart  %}
 
         
+
         <a href="#" class="btn  btn-success"> <span class="text">Added to cart</span> <i class="fas fa-check"></i>  </a>
         <a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>
 
         {% else %}
-        <input type="hidden" id="max" value="{{stockbal }}">
-        <a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+        <form  action="/cart/add_cart_ind/" method="GET" enctype="multipart/form-data">
+        <div class="row">
+         
+            <input type="hidden" name="product_id" class="form-control"  value="{{  single_product.id }}">
+            <div class="col-sm-4 fw-bold mb-1">Quantity</div>
+            <div class="col-sm-2">
+            <input type="text" name="quantity" class="form-control"  value="4">
+            </div>
+            <div class="col-sm-4">
+              <button  type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+            </div>
+        </div>
+      </form>
         {% endif %}
         {% endif %}
     <hr>
@@ -73,19 +95,11 @@
           <div class="col-sm-3">{{ single_product.country }}</div>
         </div> <!-- row.// -->
         <input type="hidden" id="skuno"  name="skuno" value="{{ single_product.skuno }}">
-        <div class="row">
-          <div class="col-sm-4 fw-bold mb-1">Stock</div>
-          {% if stockbal > 3 %}
-          
-          {% else %}
-
-
-          {% endif %}
-        </div> <!-- row.// -->
+        
         <div class="row">
           <div class="col-sm-4 fw-bold mb-1">Pickup From</div>
           <div class="col-sm-4 mb-1">
-            <select class="form-select">
+            <select  onclick="chk_loc();" id="pickup" class="form-select">
               <option>-Select-</option>
               <option>Staple Street</option>
               <option>Dehiwala</option>
@@ -96,6 +110,22 @@
 
 
         </div> <!-- row.// -->
+
+
+        <div class="row mt-2">
+          <div class="col-sm-4 fw-bold mb-1">Stock</div>
+          <div id="avail"  class="col-sm-4 mb-1"></div>
+        </div> <!-- row.// -->
+
+        <div class="row mt-2">
+          <div id="agdt" class="col-sm-4 fw-bold mb-1"></div>
+          <div id="agcontdt"  class="col-sm-4 mb-1">
+
+          </div>
+
+
+        </div> <!-- row.// -->
+
 
          <hr>
 
@@ -155,7 +185,7 @@
 
             </div> <!-- price-wrap.// -->
           </div>
-          <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
+           
         </figcaption>
       </figure>
     </div> <!-- col.// -->
@@ -165,6 +195,11 @@
   </div> <!-- row end.// -->
 </div>  
 
+<input type="hidden" id="ha" value="{{stockbal }}">
+<input type="hidden" id="a" value="{{ a }}">
+<input type="hidden" id="b" value="{{ b }}">
+<input type="hidden" id="c" value="{{ c }}">
+<input type="hidden" id="d" value="{{ d }}">
 
 
 </div> <!-- container .//  -->
@@ -229,7 +264,10 @@ document.getElementById('stock_det').innerHTML = myObj.tb;
 
 
 </script>
-
+<script src="{% static 'js/script_1.js' %}" type="text/javascript"></script>
+ 
+  
+</script>
 
 
 
